--- a/style.css
+++ b/style.css
@@ -11,11 +11,11 @@ body {
 }
 
 main {
-  background-color: #999999;
+  background-color: hsl(0deg, 0%, 60%);
 }
 
 header {
-  border-bottom: 8px solid #666666;
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
 }
 
 .max-width-wrapper {
@@ -35,19 +35,18 @@ header {
 
 .card {
   background-color: white;
-  border-bottom: 8px solid #666666;
+  border-bottom: 8px solid hsl(0deg, 0%, 40%);
   padding: 4px 24px;
 }
 
 .indented-heading{
-  margin: 0;
-  background-color: #fec000;
+  background-color: hsl(45deg, 100%, 50%);
   padding: 8px 30px;
   max-width: fit-content;
-  margin-left: -30px;
-  border-bottom: 8px solid #cb9900;
+  margin: 0 0 0 -30px;
+  border-bottom: 8px solid hsl(45deg, 100%, 40%);
 }
 
 strong {
-  color: #2ba679;
+  color: hsl(160deg, 100%, 30%);
 }
